# freeselcall

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_lib.py  entrypoint.sh  pyproject.toml
.github/workflows/: container.yml
freeselcall/: __main__.py  audio.py  chan_test_tune.py  fsk_build.py  modem.py  pagecall_magic.py  shell.py  test.py  test_pagecall_magic.py  web.py
freeselcall/static/: index.html
