[tool.poetry]
name = "freeselcall"
version = "0.0.7"
description = ""
authors = ["xssfox <xss@sprocketfox.io>"]
readme = "README.md"
include = [
    { path = "codec2", format =  ["sdist"] },
]

[tool.poetry.build]
script = "build_lib.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.11"
cffi = "^1.16.0"
configargparse = "^1.7"
pyaudio = "^0.2.11"
tabulate = "^0.9.0"
pydub = "^0.25.1"
prompt-toolkit = "^3.0.43"
flask = "^3.0.2"
flask-socketio = "^5.3.6"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[tool.poetry.scripts]
freeselcall = 'freeselcall:__main__.main'

[build-system]
requires = ["wheel", "poetry-core","setuptools","cffi"]
build-backend = "poetry.core.masonry.api"
